updatig our details

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
 <body>
     <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm</p>
+        <p class='masthead-intro'>WAH GWAAN IM..</p>
         <h1 class='masthead-heading'>Jomo Guscott</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p></p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Im from Jamaica, but I currently reside in Paterson, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to take long drives, I like to play video games, I enjoy flying planes in simulation with the hopes of flying in reality.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I dream of being a racer or a pilot for an explorer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Paterson NJ.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to diversify my self for the professional world.</p>
     </section>
 
     <footer id="footer">
